--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: Continuous Integration #action名称
+name: Continuous Deploy #action名称
 on: [push] #在推送的时候运行此action
 
 jobs:
-  build_job:
+  deploy_job:
     runs-on: ubuntu-latest  #运行环境
     name: build
     steps:
@@ -14,3 +14,13 @@ jobs:
         run: yarn
       - name: Build
         run: yarn build
+
+      # 利用action把build好的文件上传到服务器/var/www/react-app路径下,需要确认此目录已在服务端创建
+      - name: deploy file to server
+        uses: wlixcc/SFTP-Deploy-Action@v1.0 
+        with:  
+          username: 'root'   #ssh user name
+          server: '${{ secrets.SERVER_IP }}'
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          local_path: './build/*'  # 对应我们项目build的文件夹路径
+          remote_path: '/var/www/react-app'
