--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
           server: '${{ secrets.SERVER_IP }}'
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
           local_path: './build/*'  # 对应我们项目build的文件夹路径
-          remote_path: '/var/www/react-app'
+          remote_path: '/var/www/react-app/'
