--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,17 +10,14 @@ jobs:
       - name: Checkout    
         uses: actions/checkout@v2    #这里使用了github官方提供的action,checkout项目到虚拟机上
 
-      - name: Install Dependencies
-        run: yarn
-      - name: Build
-        run: yarn build
 
       # 利用action把build好的文件上传到服务器/var/www/react-app路径下,需要确认此目录已在服务端创建
       - name: deploy file to server
-        uses: wlixcc/SFTP-Deploy-Action@v1.2.1
+        uses: wlixcc/SFTP-Deploy-Action@v1.2.6
         with:  
           username: 'root'   #ssh user name
           server: '${{ secrets.SERVER_IP }}'
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
           local_path: './build/*'  # 对应我们项目build的文件夹路径
           remote_path: '/var/www/react-app/'
+          rsyncArgs : "-avz"
