--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
           username: 'root'   #ssh user name
           server: '${{ secrets.SERVER_IP }}'
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          local_path: './build/*'  # 对应我们项目build的文件夹路径
+          local_path: './test/*'  # 对应我们项目build的文件夹路径
           remote_path: '/var/www/react-app/'
           rsyncArgs : "-avz"
