--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
           local_path: './test/*'  # 对应我们项目build的文件夹路径
           remote_path: '/var/www/react-app/'
-          rsyncArgs : "-avz"
+          rsyncArgs : "-avz --checksum ./test/* root${{ secrets.SERVER_IP }}:/var/www/react-app/"
